Small responsive fixes to reduce padding and horizontal scroll

--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -31,12 +31,14 @@
   }
 
   .post-header {
-    padding: 0 30px;
     border-bottom: 1px solid;
     margin-bottom: 15px;
-    padding: 0 30px;
     border-color: #657161;
     border-bottom-style: dashed;
+
+    @media all and (min-width: 700px) {
+      padding: 0 30px;
+    }
 
     h1 {
       margin: 10px 0;
@@ -57,11 +59,14 @@
   }
 
   .post-content {
-    padding: 0 30px;
+    @media all and (min-width: 700px) {
+      padding: 0 30px;
+    }
   }
 }
 
 .mood {
+  overflow: hidden;
   position: relative;
   box-shadow: 1px 2px 4px rgb(0 0 0 / 10%);
   border-radius: 15px 65px 40px 75px/5px 5px 5px 5px;
@@ -76,5 +81,9 @@
   }
   li {
     list-style: none;
+  }
+
+  @media all and (min-width: 700px) {
+    overflow: initial;
   }
 }
